--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ html {
   height: 100%;
 }
 
-body {
+.page {
   position: relative;
   display: grid;
   justify-items: center;
@@ -32,7 +32,7 @@ body {
   margin: 0px;
 }
 
-body::before {
+.page::before {
   content: "";
   z-index: 1;
   grid-column: 1 / 2;
@@ -46,7 +46,7 @@ body::before {
   z-index: 1;
   grid-column: 1 / 2;
   grid-row: 1 / 2;
-  width: 739px;
+  max-width: 739px;
   padding-top: 60px;
   color: #000;
   font-weight: 800;
@@ -56,10 +56,12 @@ body::before {
   text-align: center;
   text-transform: uppercase;
   font-family: 'Raleway', sans-serif;
+  cursor: default;
 }
 
 .page__heading::after {
   content: "*";
+  cursor: default;
 }
 
 .page__heading:hover {
@@ -74,8 +76,7 @@ body::before {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 742px;
-  height: 142px;
+  max-width: 742px;
   border: 2px solid currentColor;
   border-radius: 20px;
   padding: 36px 44px;
